[gd_scene load_steps=16 format=4 uid="uid://d12dhespqvkc7"]

[ext_resource type="Script" uid="uid://llq438rwmpfk" path="res://scripts/slider_input.gd" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://dpwa4f1v3d36e" path="res://sprites/tileset.png" id="3_sugp2"]
[ext_resource type="Script" uid="uid://bi5wyluecf74y" path="res://scripts/camera_follow.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://coa8gkw6jsl3g" path="res://scenes/detect.gd" id="4_o6xl0"]
[ext_resource type="Script" uid="uid://di4ohh5b1sw2o" path="res://scripts/playermanager.gd" id="5_tefeu"]
[ext_resource type="PackedScene" uid="uid://dyhk1ig0r33hs" path="res://scenes/door.tscn" id="6_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cr4iolb6ky2yc" path="res://scenes/lift.tscn" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://ch2bngobt2w4u" path="res://scenes/heart_beat.gd" id="8_tipki"]
[ext_resource type="Shader" uid="uid://nhtx41xu64n" path="res://scenes/main.gdshader" id="9_85g3d"]

[sub_resource type="CanvasTexture" id="CanvasTexture_sugp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5qli"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tipki"]
texture = ExtResource("3_sugp2")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7.10679, -6.9545, -7.00526, -6.75145, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.02029, -6.93433, -8, -6.87702, -8, -8, 8, -8, 8, 8, 7.0776, 8)
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7.10679, -6.9545, -7.00526, -6.75145, 8, -8, 8)
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
5:0/0/terrains_peering_bit/bottom_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
6:0/0/terrains_peering_bit/bottom_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.02029, -6.93433, -8, -6.87702, -8, -8, 8, -8, 8, 8, 7.0776, 8)
7:0/0/terrains_peering_bit/bottom_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/top_side = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/top_side = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.85297, -8, -6.85297, 7.00526, 8, 7.10679, 8, 8, -8, 8)
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
1:3/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.85297, -8, -6.85297, 7.00526, 8, 7.10679, 8, 8, -8, 8)
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 7.0776, 6.99164, 6.96298, -8, 8, -8, 8, 8, -8, 8)
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7.10679, -6.9545, -7.00526, -6.75145, 8, -8, 8)
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_side = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/left_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/left_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.02029, -6.93433, -8, -6.87702, -8, -8, 8, -8, 8, 8, 7.0776, 8)
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7.10679, -6.9545, -7.00526, -6.75145, 8, -8, 8)
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/left_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.93433, -8, -6.87702, -8, -8, 8, -8)
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.02029, -6.93433, -8, -6.87702, -8, -8, 8, -8, 8, 8, 7.0776, 8)
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
0:5/0/terrains_peering_bit/right_side = 0
0:5/0/terrains_peering_bit/bottom_side = 0
0:5/0/terrains_peering_bit/top_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_side = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/left_side = 0
2:5/0/terrains_peering_bit/top_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
4:5/0/terrains_peering_bit/right_side = 0
4:5/0/terrains_peering_bit/bottom_side = 0
4:5/0/terrains_peering_bit/top_side = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/terrains_peering_bit/right_side = 0
5:5/0/terrains_peering_bit/bottom_side = 0
5:5/0/terrains_peering_bit/left_side = 0
5:5/0/terrains_peering_bit/top_side = 0
6:5/0 = 0
6:5/0/terrain_set = 0
6:5/0/terrain = 0
6:5/0/terrains_peering_bit/right_side = 0
6:5/0/terrains_peering_bit/bottom_side = 0
6:5/0/terrains_peering_bit/left_side = 0
6:5/0/terrains_peering_bit/top_side = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrain = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
7:5/0/terrains_peering_bit/bottom_side = 0
7:5/0/terrains_peering_bit/left_side = 0
7:5/0/terrains_peering_bit/top_side = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/bottom_side = 0
0:6/0/terrains_peering_bit/top_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/left_side = 0
1:6/0/terrains_peering_bit/top_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/bottom_side = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_side = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.9545, -8, -6.75145, 8, -8, 8)
4:6/0/terrains_peering_bit/right_side = 0
4:6/0/terrains_peering_bit/bottom_side = 0
4:6/0/terrains_peering_bit/top_side = 0
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/terrain = 0
5:6/0/terrains_peering_bit/right_side = 0
5:6/0/terrains_peering_bit/bottom_side = 0
5:6/0/terrains_peering_bit/left_side = 0
5:6/0/terrains_peering_bit/top_side = 0
6:6/0 = 0
6:6/0/terrain_set = 0
6:6/0/terrain = 0
6:6/0/terrains_peering_bit/right_side = 0
6:6/0/terrains_peering_bit/bottom_side = 0
6:6/0/terrains_peering_bit/left_side = 0
6:6/0/terrains_peering_bit/top_side = 0
7:6/0 = 0
7:6/0/terrain_set = 0
7:6/0/terrain = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.90568, 8, 6.96298, -8, 8, -8, 8, 8)
7:6/0/terrains_peering_bit/bottom_side = 0
7:6/0/terrains_peering_bit/left_side = 0
7:6/0/terrains_peering_bit/top_side = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.85297, -8, -6.85297, 7.00526, 8, 7.10679, 8, 8, -8, 8)
0:7/0/terrains_peering_bit/right_side = 0
0:7/0/terrains_peering_bit/top_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/left_side = 0
1:7/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/left_side = 0
2:7/0/terrains_peering_bit/top_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 7.0776, 6.99164, 6.96298, -8, 8, -8, 8, 8, -8, 8)
3:7/0/terrains_peering_bit/left_side = 0
3:7/0/terrains_peering_bit/top_side = 0
4:7/0 = 0
4:7/0/terrain_set = 0
4:7/0/terrain = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.85297, -8, -6.85297, 7.00526, 8, 7.10679, 8, 8, -8, 8)
4:7/0/terrains_peering_bit/right_side = 0
4:7/0/terrains_peering_bit/top_side = 0
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/terrain = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
5:7/0/terrains_peering_bit/right_side = 0
5:7/0/terrains_peering_bit/left_side = 0
5:7/0/terrains_peering_bit/top_side = 0
6:7/0 = 0
6:7/0/terrain_set = 0
6:7/0/terrain = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 8, 7.10679, 8, 8, -8, 8)
6:7/0/terrains_peering_bit/right_side = 0
6:7/0/terrains_peering_bit/left_side = 0
6:7/0/terrains_peering_bit/top_side = 0
7:7/0 = 0
7:7/0/terrain_set = 0
7:7/0/terrain = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.99164, 7.0776, 6.99164, 6.96298, -8, 8, -8, 8, 8, -8, 8)
7:7/0/terrains_peering_bit/left_side = 0
7:7/0/terrains_peering_bit/top_side = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
12:3/0 = 0
11:3/0 = 0
10:3/0 = 0
10:2/0 = 0
11:2/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
9:2/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_tbgi4"]
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.784314, 0, 0.25098, 1)
sources/0 = SubResource("TileSetAtlasSource_tipki")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_choun"]
shader = ExtResource("9_85g3d")
shader_parameter/curvature = 2.0
shader_parameter/skip = 1.0
shader_parameter/image_flicker = 1.0
shader_parameter/vignette_flicker_speed = 1.0
shader_parameter/vignette_strength = 1.0
shader_parameter/small_scanlines_speed = 1.0
shader_parameter/small_scanlines_proximity = 1.0
shader_parameter/small_scanlines_opacity = 1.0
shader_parameter/scanlines_opacity = 1.0
shader_parameter/scanlines_speed = 1.0
shader_parameter/scanline_thickness = 0.5
shader_parameter/scanlines_spacing = 1.0

[node name="Node2D" type="Node2D"]
scale = Vector2(1.00154, 1.00154)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer2"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2/ParallaxBackground"]
modulate = Color(0, 0, 0, 1)
position = Vector2(634.5, 355)
scale = Vector2(1315, 748)
texture = SubResource("CanvasTexture_sugp2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -209.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_0wfyh")

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 649.0
offset_top = 20.0
offset_right = 666.0
offset_bottom = 146.0
scale = Vector2(1.42593, 1.42593)

[node name="VSlider" type="VSlider" parent="CanvasLayer/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -55.0
offset_right = 40.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01094, 1.01094)
theme_override_styles/slider = SubResource("StyleBoxFlat_o5qli")
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="w" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -5.5
offset_right = -54.0
offset_bottom = 26.5
grow_horizontal = 0
grow_vertical = 2

[node name="HSlider" type="HSlider" parent="CanvasLayer/Panel/w"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -12.5
offset_right = 26.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.62423, 1.62423)
theme_override_styles/slider = SubResource("StyleBoxFlat_0wfyh")
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1048, 176)

[node name="CameraFollow" type="Node" parent="."]
script = ExtResource("4_jyhfs")

[node name="AreaDetect" type="Node2D" parent="."]

[node name="Room1" type="TileMapLayer" parent="AreaDetect"]
texture_filter = 1
use_parent_material = true
position = Vector2(-64, -320)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAADAAAAAAAFAAMAAAADAAMAAAADAAMAAAABAAMAAAAEAAMAAAABAAMAAAAAAAEAAAAAAAEAAAADAAEAAAAFAAIAAAACAAEAAAAFAAIAAAABAAEAAAAFAAIAAAABAAIAAAAFAAIAAAACAAIAAAAFAAIAAAADAAIAAAAFAAIAAAAEAAIAAAAFAAIAAAAAAAIAAAAFAAIAAAAFAAIAAAADAAEAAAAFAAEAAAADAAEAAAAEAAEAAAAFAAIAAAABAAMAAAABAAMAAAACAAMAAAABAAMAAAAAAAMAAAAAAAMAAAA=")
tile_set = SubResource("TileSet_tbgi4")
script = ExtResource("4_o6xl0")

[node name="Area2D" type="Area2D" parent="AreaDetect/Room1" groups=["room"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDetect/Room1/Area2D"]
position = Vector2(48.0938, 32.4063)
scale = Vector2(0.25, 0.25)
polygon = PackedVector2Array(-192.375, -129.625, -192.375, 126.375, 191.625, 126.375, 191.625, -129.625)

[node name="Node2D" type="Node2D" parent="AreaDetect/Room1"]
position = Vector2(48, 32)

[node name="Room2" type="TileMapLayer" parent="AreaDetect"]
texture_filter = 1
use_parent_material = true
position = Vector2(-64, -320)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD//wIAAAAIAAAAAAD+/wAAAAADAAEAAAD+/wMAAAADAAMAAAD8/wEAAAAAAAEAAAD8/wIAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wAAAAAAAAAAAAD9/wAAAAACAAIAAAD9////AAAAAAIAAAD9//7/AAAAAAAAAAD+//7/AAADAAAAAAD+////AAADAAEAAAD+/wEAAAADAAEAAAD9/wQAAAADAAMAAAD9/wMAAAABAAEAAAD9/wEAAAAGAAEAAAD9/wIAAAAGAAEAAAD+/wIAAAAFAAIAAAD8/wQAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_tbgi4")
script = ExtResource("4_o6xl0")

[node name="Area2D" type="Area2D" parent="AreaDetect/Room2" groups=["room"]]
position = Vector2(-64, 16)
scale = Vector2(0.25, 0.25)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="AreaDetect/Room2/Area2D"]
position = Vector2(256, -64)
scale = Vector2(4, 4)
polygon = PackedVector2Array(-48, -32, -16, -32, -16, 64, -32, 64, -32, 80, -64, 80, -64, 0, -48, 0)

[node name="Node2D" type="Node2D" parent="AreaDetect/Room2"]
position = Vector2(-40, 32)

[node name="Room3" type="TileMapLayer" parent="AreaDetect"]
texture_filter = 1
use_parent_material = true
position = Vector2(-64, -320)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAAAAAD9/wYAAAACAAAAAAD7/wgAAAAAAAMAAAD9/wgAAAACAAMAAAD7/wcAAAAAAAEAAAD8/wgAAAABAAMAAAD+/wgAAAACAAMAAAD//wgAAAACAAEAAAD//wkAAAAAAAIAAAD//woAAAAAAAMAAAAAAAoAAAADAAMAAAAAAAkAAAAGAAIAAAAAAAgAAAADAAEAAAAAAAcAAAAGAAIAAAAAAAYAAAADAAAAAAD//wYAAAACAAAAAAD+/wYAAAACAAAAAAD8/wcAAAAFAAIAAAD9/wcAAAAFAAIAAAD+/wcAAAAFAAIAAAD//wcAAAAFAAIAAAD8/wYAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_tbgi4")
script = ExtResource("4_o6xl0")

[node name="Area2D" type="Area2D" parent="AreaDetect/Room3" groups=["room"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDetect/Room3/Area2D"]
polygon = PackedVector2Array(-80, 96, 16, 96, 16, 176, -16, 176, -16, 144, -80, 144)

[node name="Node2D" type="Node2D" parent="AreaDetect/Room3"]
position = Vector2(-32, 120)

[node name="Room4" type="TileMapLayer" parent="AreaDetect"]
texture_filter = 1
use_parent_material = true
position = Vector2(-64, -320)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAACAAcAAAABAAMAAAADAAcAAAABAAMAAAAEAAcAAAABAAMAAAAFAAcAAAABAAMAAAACAAYAAAAAAAAAAAADAAYAAAACAAIAAAADAAUAAAAAAAAAAAAEAAUAAAADAAAAAAAEAAYAAAABAAIAAAAFAAYAAAACAAAAAAAGAAYAAAADAAAAAAAGAAcAAAADAAMAAAA=")
tile_set = SubResource("TileSet_tbgi4")
script = ExtResource("4_o6xl0")

[node name="Area2D" type="Area2D" parent="AreaDetect/Room4" groups=["room"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDetect/Room4/Area2D"]
polygon = PackedVector2Array(32, 96, 32, 128, 112, 128, 112, 96, 80, 96, 80, 80, 48, 80, 48, 96)

[node name="Node2D" type="Node2D" parent="AreaDetect/Room4"]
position = Vector2(72, 112)

[node name="Room5" type="TileMapLayer" parent="AreaDetect"]
texture_filter = 1
use_parent_material = true
position = Vector2(-319.507, -255.605)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAGAAgAAAABAAAAAAAJAAgAAAACAAAAAAAIAAgAAAACAAAAAAAHAAgAAAACAAAAAAAKAAgAAAADAAAAAAAKAAsAAAADAAMAAAAGAAkAAAAAAAIAAAAGAAoAAAAAAAIAAAAGAAsAAAAAAAMAAAAIAAsAAAABAAMAAAAJAAsAAAABAAMAAAAHAAsAAAABAAMAAAAKAAkAAAADAAEAAAAKAAoAAAAFAAIAAAAJAAkAAAAFAAEAAAAIAAkAAAAFAAEAAAAHAAoAAAAFAAEAAAAIAAoAAAAFAAEAAAAJAAoAAAAFAAEAAAAHAAkAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_tbgi4")
script = ExtResource("4_o6xl0")

[node name="Area2D" type="Area2D" parent="AreaDetect/Room5" groups=["room"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDetect/Room5/Area2D"]
polygon = PackedVector2Array(176, 128, 176, 192, 96, 192, 96, 128)

[node name="Node2D" type="Node2D" parent="AreaDetect/Room5"]
position = Vector2(136, 160)

[node name="Playermanager" type="Node" parent="."]
script = ExtResource("5_tefeu")

[node name="Doors" type="Node" parent="."]

[node name="Door1" parent="Doors" instance=ExtResource("6_o6xl0")]
position = Vector2(-96, -160)

[node name="Door2" parent="Doors" instance=ExtResource("6_o6xl0")]
position = Vector2(-288, 32)

[node name="Area2D" parent="Doors" instance=ExtResource("6_o6xl0")]
position = Vector2(32, 160)

[node name="Area2D2" parent="Doors" instance=ExtResource("6_o6xl0")]
position = Vector2(32, 288)

[node name="ElevatorDown" type="Node" parent="."]

[node name="Area2D" parent="ElevatorDown" instance=ExtResource("7_o6xl0")]
position = Vector2(416, 416)

[node name="Temperature" type="Node" parent="."]
script = ExtResource("8_tipki")

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer3"]
material = SubResource("ShaderMaterial_choun")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="drag_ended" from="CanvasLayer/Panel/Panel/VSlider" to="CanvasLayer/Panel" method="_on_v_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/Panel/Panel/VSlider" to="CanvasLayer/Panel" method="_on_v_slider_value_changed"]
[connection signal="drag_ended" from="CanvasLayer/Panel/w/HSlider" to="CanvasLayer/Panel" method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/Panel/w/HSlider" to="CanvasLayer/Panel" method="_on_h_slider_value_changed"]
